force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Additional_Comments_Lines_of_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_Lines_of_Coverage__c</fullName>
    <label>Additional Comments(Lines of Coverage)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>