force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Admin_Commited_High_Response_Level__c.field-meta.xml
<CustomField>
    <fullName>Admin_Commited_High_Response_Level__c</fullName>
    <label>Admin Commited High Response Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_or_N</valueSetName>
    </valueSet>
</CustomField>