force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Admin_Title__c.field-meta.xml
<CustomField>
    <fullName>Admin_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Admin Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>