force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Anticipated_pending_items_anything_inte__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_pending_items_anything_inte__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anticipated pending items</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>