force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Approved?</label>
    <type>Checkbox</type>
</CustomField>