force-app/main/default/objects/Transition_to_Fulfillment__c/fields/BA_sent_expectation_setting_macro_to_ER__c.field-meta.xml
<CustomField>
    <fullName>BA_sent_expectation_setting_macro_to_ER__c</fullName>
    <description>Used in BT TTF</description>
    <label>BA sent expectation setting macro to ER?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_or_N</valueSetName>
    </valueSet>
</CustomField>