force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Benefits_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Point_of_Contact__c</fullName>
    <label>Benefits Point of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>