force-app/main/default/objects/Transition_to_Fulfillment__c/fields/BoR_Eligible_Medical__c.field-meta.xml
<CustomField>
    <fullName>BoR_Eligible_Medical__c</fullName>
    <description>Used by BYB sales to indicate whether the group&apos;s medical coverage is eligible for BoR.</description>
    <label>BoR Eligible Medical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_or_N</valueSetName>
    </valueSet>
</CustomField>