force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Broker_Loyal__c.field-meta.xml
<CustomField>
    <fullName>Broker_Loyal__c</fullName>
    <description>Used by BYB sales to indicate whether the group is loyal to their broker or not.</description>
    <label>Broker Loyal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_or_N</valueSetName>
    </valueSet>
</CustomField>