force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Broker_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Broker_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transition to Fulfillments (Broker Point of Contact)</relationshipLabel>
    <relationshipName>Transition_to_Fulfillments1</relationshipName>
    <type>Lookup</type>
</CustomField>