force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Bulk_Deal__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Deal__c</fullName>
    <label>Partner Bulk Deal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>