force-app/main/default/objects/Transition_to_Fulfillment__c/fields/BYB_Reason__c.field-meta.xml
<CustomField>
    <fullName>BYB_Reason__c</fullName>
    <description>Used by BYB sales to indicate why group is choosing BYB if their medical coverage is eligible for BoR</description>
    <label>BYB Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker Loyalty</fullName>
            </value>
            <value>
                <fullName>Unsupported ancillary carrier</fullName>
            </value>
            <value>
                <fullName>Blocked line of coverage (vol lidi, supplemental)</fullName>
            </value>
            <value>
                <fullName>Poor Gusto experience</fullName>
            </value>
            <value>
                <fullName>Premium tier</fullName>
            </value>
            <value>
                <fullName>Outgrowing SGHI soon</fullName>
            </value>
            <value>
                <fullName>Blackout window</fullName>
            </value>
            <value>
                <fullName>Unsupported CS</fullName>
            </value>
            <value>
                <fullName>Broker referral (broker already on BYB)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>