force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Carrier_Order__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier Order</label>
    <referenceTo>Carrier_Order__c</referenceTo>
    <relationshipLabel>Transition to Fulfillments</relationshipLabel>
    <relationshipName>Transition_to_Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>