force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Commuter_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Commuter_Renewal_Date__c</fullName>
    <description>Benefit Transfer- Used in to store Commuter date field(for BT we are not storing commuter renewal date)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Commuter Renewal Date</label>
    <type>Date</type>
</CustomField>