force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefits Point of Contact 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transition to Fulfillments</relationshipLabel>
    <relationshipName>Transition_to_Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>