force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Contact_Preference__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preference__c</fullName>
    <label>Contact Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>