force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Coverage_effective_date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_effective_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverage effective date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>