force-app/main/default/objects/Transition_to_Fulfillment__c/fields/DBA__c.field-meta.xml
<CustomField>
    <fullName>DBA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DBA</label>
    <length>60</length>
    <type>Text</type>
</CustomField>