force-app/main/default/objects/Transition_to_Fulfillment__c/fields/DCA_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>DCA_Renewal_Date__c</fullName>
    <description>Benefit Transfer- Used in to store DCA renewal date provided by the User</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DCA Renewal Date</label>
    <type>Date</type>
</CustomField>