force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Demo_Complete__c.field-meta.xml
<CustomField>
    <fullName>Demo_Complete__c</fullName>
    <label>Demo Complete?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>