force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Dental_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Dental_Carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>