force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Dental_New_carriers__c.field-meta.xml
<CustomField>
    <fullName>Dental_New_carriers__c</fullName>
    <label>Dental New carriers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>