force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Dental_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Dental_Renewal_Date__c</fullName>
    <description>This field we will use in BOR, to handle multiple dates using &quot;;&quot; separator.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dental Renewal Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>