force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Direct_Deposit_Speed__c.field-meta.xml
<CustomField>
    <fullName>Direct_Deposit_Speed__c</fullName>
    <description>What direct deposit speed do you want to use on Gusto?</description>
    <inlineHelpText>What direct deposit speed do you want to use on Gusto?</inlineHelpText>
    <label>Direct Deposit Speed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Next-day</fullName>
            </value>
            <value>
                <fullName>2-day</fullName>
            </value>
            <value>
                <fullName>4-day</fullName>
            </value>
            <value>
                <fullName>1-day</fullName>
                <isActive>false</isActive>
                <label>1-day</label>
            </value>
            <value>
                <fullName>Next Day</fullName>
                <isActive>false</isActive>
                <label>Next Day</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>