force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Does_group_have_an_address_change__c.field-meta.xml
<CustomField>
    <fullName>Does_group_have_an_address_change__c</fullName>
    <label>Address change to be made by submission?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_or_N</valueSetName>
    </valueSet>
</CustomField>