force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Doesnot_require_2_factor_Authentication__c.field-meta.xml
<CustomField>
    <fullName>Doesnot_require_2_factor_Authentication__c</fullName>
    <description>Online provider that does not require 2-factor authentication</description>
    <inlineHelpText>Does not require 2-Factor Authentication</inlineHelpText>
    <label>Doesnot require 2-factor Authentication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>agentsync__Yes_or_No</valueSetName>
    </valueSet>
</CustomField>