force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Eligible_SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>Eligible_SIC_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current SIC Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>