force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Existing_MDVLiDi_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Existing_MDVLiDi_Coverage__c</fullName>
    <label>Existing MDVLiDi Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Different Carrier</fullName>
            </value>
            <value>
                <fullName>Yes - Same Carrier (Carrier Approved, see notes)</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>