force-app/main/default/objects/Transition_to_Fulfillment__c/fields/FSA_HSA_401K__c.field-meta.xml
<CustomField>
    <fullName>FSA_HSA_401K__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FSA/HSA/401K</label>
    <length>255</length>
    <type>Text</type>
</CustomField>