force-app/main/default/objects/Transition_to_Fulfillment__c/fields/FSA_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>FSA_Renewal_Date__c</fullName>
    <description>Benefit Transfer- Used to store Tada FSA renewal date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FSA Renewal Date</label>
    <type>Date</type>
</CustomField>