force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Ghost_plans_removed_from_HIPPO__c.field-meta.xml
<CustomField>
    <fullName>Ghost_plans_removed_from_HIPPO__c</fullName>
    <label>Ghost Plans?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes-Removed</fullName>
            </value>
            <value>
                <fullName>No-Allowed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>