force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Handed_off_to_preferred_broker_partner__c.field-meta.xml
<CustomField>
    <fullName>Handed_off_to_preferred_broker_partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Groups which have this checkbox marked would then show up on a report allowing us to easily audit whether they subsequently make it on the broker&apos;s monthly payment report.
BMM-461</description>
    <label>Handed off to preferred broker partner</label>
    <type>Checkbox</type>
</CustomField>