force-app/main/default/objects/Transition_to_Fulfillment__c/fields/HSA_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>HSA_Renewal_Date__c</fullName>
    <description>Benefit Transfer- Used to store Tada HSA Renewal Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>HSA Renewal Date</label>
    <type>Date</type>
</CustomField>