force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Intro_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Intro_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether intro emails have been sent</description>
    <label>Intro Notification Sent</label>
    <type>Checkbox</type>
</CustomField>