force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Last_Expected_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Expected_Pay_Date__c</fullName>
    <description>When is your last expected pay day with your current payroll provider?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When is your last expected pay day with your current payroll provider?</inlineHelpText>
    <label>Last Expected Pay Date</label>
    <type>Date</type>
</CustomField>