force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Life_New_Line_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Life_New_Line_Carrier__c</fullName>
    <label>Life New Line Carrier</label>
    <type>TextArea</type>
</CustomField>