force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Link_to_Spreadsheet__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Spreadsheet__c</fullName>
    <label>Link to Spreadsheet</label>
    <type>TextArea</type>
</CustomField>