force-app/main/default/objects/Transition_to_Fulfillment__c/fields/List_of_New_Hire_Names_to_be_included__c.field-meta.xml
<CustomField>
    <fullName>List_of_New_Hire_Names_to_be_included__c</fullName>
    <label>List of New Hire Names to be included</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>