force-app/main/default/objects/Transition_to_Fulfillment__c/fields/List_of_plans_removed__c.field-meta.xml
<CustomField>
    <fullName>List_of_plans_removed__c</fullName>
    <label>List of plans removed</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>