force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Long_term_Disability_New_carriers__c.field-meta.xml
<CustomField>
    <fullName>Long_term_Disability_New_carriers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Long term Disability New carriers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>