force-app/main/default/objects/Transition_to_Fulfillment__c/fields/LTD_Carrier__c.field-meta.xml
<CustomField>
    <fullName>LTD_Carrier__c</fullName>
    <description>Benefit Transfer: Stores Carrier Id in &quot;;&quot; separated format</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LTD Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>