force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Medical_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Medical_Carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>