force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Medical_Contribution_Change__c.field-meta.xml
<CustomField>
    <fullName>Medical_Contribution_Change__c</fullName>
    <label>Medical Contribution Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>