force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Medical_New_carriers__c.field-meta.xml
<CustomField>
    <fullName>Medical_New_carriers__c</fullName>
    <label>Medical New carriers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>