force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Of_hours_for_EE_to_be_eligible__c.field-meta.xml
<CustomField>
    <fullName>Of_hours_for_EE_to_be_eligible__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># of hours for EE to be eligible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>