force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Other_OE_Blocker__c.field-meta.xml
<CustomField>
    <fullName>Other_OE_Blocker__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other OE Blocker</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>