force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Out_of_State_Employees_States__c.field-meta.xml
<CustomField>
    <fullName>Out_of_State_Employees_States__c</fullName>
    <label>Out of State Employees &amp; States</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>