force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Payroll_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll Start Date</label>
    <type>Date</type>
</CustomField>