force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Point_of_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Point of Contact(Email)</label>
    <type>Email</type>
</CustomField>