force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Preferred_Broker__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Broker__c</fullName>
    <description>Used by BYB Sales to indicate which Preferred External Broker was used by the group</description>
    <label>Preferred Broker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Digital</fullName>
            </value>
            <value>
                <fullName>Sequoia</fullName>
            </value>
            <value>
                <fullName>Bennie</fullName>
            </value>
            <value>
                <fullName>Gallagher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>