force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Previous_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Previous_Payroll_Provider__c</fullName>
    <label>Previous Payroll Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADP Run</fullName>
            </value>
            <value>
                <fullName>ADP Resource</fullName>
            </value>
            <value>
                <fullName>ADP Total Source</fullName>
            </value>
            <value>
                <fullName>ADP Workforce Now</fullName>
            </value>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>BenefitMall</fullName>
            </value>
            <value>
                <fullName>Heartland Payroll</fullName>
            </value>
            <value>
                <fullName>Intuit Online Payroll</fullName>
            </value>
            <value>
                <fullName>iSolved</fullName>
            </value>
            <value>
                <fullName>JustWorks</fullName>
            </value>
            <value>
                <fullName>Namely</fullName>
            </value>
            <value>
                <fullName>Offline (manual)</fullName>
            </value>
            <value>
                <fullName>Offline (downloaded reports)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paychex</fullName>
            </value>
            <value>
                <fullName>Paychex Preview</fullName>
            </value>
            <value>
                <fullName>Paycom</fullName>
            </value>
            <value>
                <fullName>Paycor</fullName>
            </value>
            <value>
                <fullName>Patriot Software</fullName>
            </value>
            <value>
                <fullName>Paylocity</fullName>
            </value>
            <value>
                <fullName>PEO / Full Service Backend Provider</fullName>
            </value>
            <value>
                <fullName>QuickBooks Desktop</fullName>
            </value>
            <value>
                <fullName>QuickBooks Online</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>SurePayroll</fullName>
            </value>
            <value>
                <fullName>Thomson Reuters</fullName>
            </value>
            <value>
                <fullName>Trinet</fullName>
            </value>
            <value>
                <fullName>Zenefits</fullName>
            </value>
            <value>
                <fullName>BambooHR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>