force-app/main/default/objects/Transition_to_Fulfillment__c/fields/PT_Approved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PT_Approved_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PT Approved Date/Time</label>
    <type>DateTime</type>
</CustomField>