force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Quoting_Address__c.field-meta.xml
<CustomField>
    <fullName>Quoting_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quoting Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>