force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Reason_for_exception_request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_exception_request__c</fullName>
    <label>Reason for exception request?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accountant has been let go</fullName>
            </value>
            <value>
                <fullName>Contract ending with current payroll provider</fullName>
            </value>
            <value>
                <fullName>Current payroll provider shut down</fullName>
            </value>
            <value>
                <fullName>Business plan Quota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>