force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Reason_for_Prioritization__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Prioritization__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for Prioritization</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>