force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When &apos;Renewal Exception&apos;=Yes, &apos;Renewal Date&apos; is mandatory.</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>