force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Renewing_Tadas__c.field-meta.xml
<CustomField>
    <fullName>Renewing_Tadas__c</fullName>
    <label>Renewing Tadas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>