force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Requires_Open_Enrollment_on_Gusto__c.field-meta.xml
<CustomField>
    <fullName>Requires_Open_Enrollment_on_Gusto__c</fullName>
    <description>Requires Open Enrollment on Gusto? For BYB</description>
    <label>Requires Open Enrollment on Gusto?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>agentsync__Yes_or_No</valueSetName>
    </valueSet>
</CustomField>