force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Select_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Select_Benefits__c</fullName>
    <label>Select Benefits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>BOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>