force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Send_Order__c.field-meta.xml
<CustomField>
    <fullName>Send_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Order</label>
    <type>Checkbox</type>
</CustomField>