force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Special_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Special_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Enrollment</label>
    <type>Checkbox</type>
</CustomField>