force-app/main/default/objects/Transition_to_Fulfillment__c/fields/STD_Carrier__c.field-meta.xml
<CustomField>
    <fullName>STD_Carrier__c</fullName>
    <description>Benefit Transfer: Stores CarrierId in &quot;;&quot; separated format</description>
    <encryptionScheme>None</encryptionScheme>
    <label>STD Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>