force-app/main/default/objects/Transition_to_Fulfillment__c/fields/STD_New_Line_Carrier__c.field-meta.xml
<CustomField>
    <fullName>STD_New_Line_Carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>STD New Line Carrier</label>
    <type>TextArea</type>
</CustomField>