force-app/main/default/objects/Transition_to_Fulfillment__c/fields/Successor_predecessor_plan_codes_and_nam__c.field-meta.xml
<CustomField>
    <fullName>Successor_predecessor_plan_codes_and_nam__c</fullName>
    <label>Successor/predecessor plan codes and nam</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>