force-app/main/default/objects/Transition_to_Fulfillment__c/fields/TAdA_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>TAdA_Renewal_Date__c</fullName>
    <label>TAdA Renewal Date</label>
    <type>Date</type>
</CustomField>